# sarafan

./: .gitignore  README.md  Sarafan.drawio
sarafan_django/: pyproject.toml
sarafan_django/sarafan_project/api/: views.py
sarafan_django/sarafan_project/products/: configurations.py  views.py
sarafan_django/sarafan_project/products/migrations/: 0002_auto_20240627_2021.py  0003_auto_20240627_2129.py  0005_auto_20240628_0855.py  (+1 more)
sarafan_django/sarafan_project/sarafan_project/: asgi.py  settings.py  urls.py
sarafan_django/sarafan_project/templates/: base.html
sarafan_django/sarafan_project/users/: admin.py  configurations.py  models.py
z1/: 1_z.py
z2/: .$Sarafan.drawio.bkp  pass_admiral.txt  ~$стовое_Джанго_Экосистема_Альфа.docx  Тестовое_Джанго_Экосистема_Альфа.docx
z2/sarafan_django/: pyproject.toml
z2/sarafan_django/sarafan_project/: db.sqlite3  manage.py
z2/sarafan_django/sarafan_project/api/: serializers.py  urls.py  views.py
z2/sarafan_django/sarafan_project/products/: admin.py  forms.py  models.py  urls.py
z2/sarafan_django/sarafan_project/products/migrations/: 0001_initial.py  0004_auto_20240628_0738.py  0006_alter_undercategory_category.py  0007_auto_20240628_1029.py
z2/sarafan_django/sarafan_project/sarafan_project/: asgi.py  settings.py  urls.py  wsgi.py
z2/sarafan_django/sarafan_project/templates/includes/: footer.html
z2/sarafan_django/sarafan_project/templates/products/: all_products.html
z2/sarafan_django/sarafan_project/users/: admin.py  models.py
z2/sarafan_django/sarafan_project/users/migrations/: 0001_initial.py
(+7 files in other folders)
